--- a/src/app/circle/component/add-post/add-post.component.html
+++ b/src/app/circle/component/add-post/add-post.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="add-post-bottom">
-  <md-slide-toggle [checked]="post.isAnonymous" (change)="anonymousChanged($event)" class="anonymous">匿名发布</md-slide-toggle>
+  <md-slide-toggle [checked]="post.anonymous" (change)="anonymousChanged($event)" class="anonymous">匿名发布</md-slide-toggle>
   <button (click)="publishPost(close)" md-raised-button class="primary-btn" color="primary"><i class="material-icons">publish</i>发布</button>
 </div>
 <button md-dialog-close #close style="display: none"></button>
