--- a/src/app/person-center/component/album/show-photos/show-one-photo/show-one-photo.component.css
+++ b/src/app/person-center/component/album/show-photos/show-one-photo/show-one-photo.component.css
@@ -226,7 +226,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
-
+  text-overflow: ellipsis;
 }
 /*相片动态操作*/
 .photo-art-operation{
