--- a/src/app/chat/component/chat/chat.component.html
+++ b/src/app/chat/component/chat/chat.component.html
@@ -1,3 +1,14 @@
-<p>
-  chat works!
-</p>
+<main class="chat-main white-box">
+  <div class="chat-top">
+    <img class="chat-profile" [src]="img" alt="">
+    <p class="chat-half-name">大脸猫 <span class="chat-online"><i class="material-icons chat-online-icon">radio_button_checked</i>[在线]</span></p>
+    <p class="chat-mood">我的撒打算打算肯德基阿斯利康点解啊克里斯</p>
+  </div>
+  <div class="chat-content">
+    <div class="chat-message">
+      <img class="message-profile" [src]="img" alt="">
+      <i class="top-border-triangle"></i>
+      <div class="message-content white-box">123</div>
+    </div>
+  </div>
+</main>
