--- a/src/app/person-center/component/home-page/home-page.component.html
+++ b/src/app/person-center/component/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div id="all">
   <!--海报开始-->
   <div id="all-poster" >
-    <!--<img src="../../../../assets/img/person-center-poster.png"/>-->
+    <img src="../../../../assets/img/person-center-poster.png"/>
   </div>
   <!--海报结束-->
 </div>
