--- a/src/app/email/component/email/email.component.css
+++ b/src/app/email/component/email/email.component.css
@@ -1,15 +1,10 @@
-#warpNav{
-
+.warpNav{
+  background: white;
   border-bottom: solid 1px rgb(224,224,224);
   box-shadow: 0 0 5px rgb(213,213,213);
-  width: 100%;
-  background: white;
 }
-
 nav{
-  width: 720px;
+  width: 300px;
   margin: auto;
   border: none;
-
 }
-
