--- a/src/app/email/component/email/email.component.html
+++ b/src/app/email/component/email/email.component.html
@@ -1,5 +1,4 @@
-
-<div id="warpNav" >
+<div class="warpNav" >
   <nav md-tab-nav-bar>
     <a md-tab-link
        *ngFor="let link of navLinks"
@@ -10,10 +9,9 @@
     </a>
   </nav>
 </div>
+<div>
+
+</div>
 <div class="home-tabs-wrapper">
   <router-outlet></router-outlet>
 </div>
-
-
-
-
