--- a/src/app/circle/component/circle-art-catalog/circle-art-catalog.component.css
+++ b/src/app/circle/component/circle-art-catalog/circle-art-catalog.component.css
@@ -1,19 +1,34 @@
 /*圈子动态目录主体*/
 .circle-catalog-main{
-
+  position: relative;
 }
+/*左边部分*/
 .circle-catalog-left{
   float: left;
   width: 60px;
   display: inline-block;
   margin: 0;
+  height: 60px;
+
 }
+/*名片包裹*/
+.business-card-wrapper{
+  top: -200px;
+  left: -25px;
+  height: 200px;
+  width: 330px;
+  position:absolute;
+  box-shadow: 0 5px 5px rgb(200,200,200);
+}
+
 /*头像*/
 .catalog-profile{
   width: 50px;
   height: 50px;
   border-radius: 25px;
   margin-right: 10px;
+  cursor: pointer;
+  margin-top: 5px;
 }
 /*右边*/
 .circle-catalog-right{
