--- a/src/app/share/component/sigle-mood/sigle-mood.component.css
+++ b/src/app/share/component/sigle-mood/sigle-mood.component.css
@@ -5,13 +5,29 @@
   padding: 8px;
   line-height: 20px;
 }
+/*包裹头像的div*/
+.mood-profile-wrapper{
+  float: left;
+  margin-right: 10px;
+  display: inline-block;
+  position: relative;
+
+}
+.business-card-wrapper{
+  top: -205px;
+  left: -25px;
+  height: 200px;
+  width: 330px;
+  position:absolute;
+  box-shadow: 0 5px 5px rgb(200,200,200);
+  z-index: 10;
+}
 /*头像*/
 .mood-profile{
   width: 50px;
   height: 50px;
   border-radius: 25px;
-  float: left;
-  margin-right: 10px;
+
 }
 /*昵称*/
 .mood-nickname{
