--- a/src/assets/css/app-style.css
+++ b/src/assets/css/app-style.css
@@ -1,5 +1,34 @@
 /*自定义全局样式*/
 
+/*名片包裹*/
+.business-card-wrapper:after, .business-card-wrapper:before {
+  top: 100%;
+  left: 50px;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.business-card-wrapper:after {
+  border-top-color: white;
+  border-width: 10px;
+  margin-left: -10px;
+}
+.business-card-wrapper:before {
+  border-color: rgba(194, 225, 245, 0);
+  border-top-color: rgb(203,203,203);
+  border-width: 11px;
+  margin-left: -11px;
+}
+
+/*home中每个单独tab模块的包裹*/
+.home-tabs-wrapper{
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
 /*按钮颜色*/
 .primary-btn{
   background: rgb(34,170,210)!important;
