--- a/src/app/chat/component/chat/chat.component.html
+++ b/src/app/chat/component/chat/chat.component.html
@@ -14,7 +14,7 @@
        </div>
   </div>
   <div class="write-message">
-    <div class="chat-editor white-box" [froalaEditor]="rfOptions" [(froalaModel)]="chatMessage.content"></div>
+    <div class="none-border-editor white-box" [froalaEditor]="rfOptions" [(froalaModel)]="chatMessage.content"></div>
   </div>
 </main>
 <div class="message-operation">
