--- a/src/app/share/component/business-card/business-card.component.html
+++ b/src/app/share/component/business-card/business-card.component.html
@@ -13,8 +13,9 @@
         </p>
       </div>
       <div class="card-operation">
-        <button md-raised-button color="warn">关注</button>
         <button md-raised-button color="primary" class="primary-btn">私信</button>
+        <button md-raised-button *ngIf="card.attentionAble" color="warn" [disabled]="isMyself()" (click)="attention()">{{getAttentionLabel()}}</button>
+        <button md-raised-button *ngIf="!card.attentionAble" (click)="cancelAttention()">{{getAttentionLabel()}}</button>
       </div>
     </div>
     <div class="card-profile-wrapper">
