--- a/src/app/email/component/email-list/email-list.component.css
+++ b/src/app/email/component/email-list/email-list.component.css
@@ -25,7 +25,7 @@
   color: rgb(120,120,120);
 }
 .show-no-half-email{
-  margin-right: 40px;
+  margin-right: 20px;
 }
 /*邮件右部*/
 .fresh-email-btn{
@@ -40,7 +40,7 @@
   font-size: 14px;
   font-weight: bold;
   border-left: solid red;
-  padding-left: 5px;
+  padding-left: 10px;
   position: relative;
 }
 
@@ -48,6 +48,7 @@
 .email-list-content{
   margin-top: 20px;
   padding: 10px;
+  position: relative;
 }
 
 /*包裹整个邮件的div*/
@@ -95,6 +96,7 @@
 /*昵称*/
 .nickname{
   font-weight: bold;
+  font-size: 14px;
 }
 /*基本信息*/
 .base-info{
@@ -107,7 +109,7 @@
   line-height: normal;
 }
 .email-info span{
-  font-size: 13px;
+  font-size: 12px;
   color: rgb(120,120,120);
   margin-left: 20px;
 }
@@ -134,4 +136,7 @@
   height: 30px;
   line-height: 30px;
 }
-
+.email-paginator{
+  border-top: 1px rgb(233,233,233) solid;
+  margin-top: 20px;
+}
